fix aspect ratio squish on images

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -58,6 +58,7 @@ a {
 
 img {
   padding: 6px 16px;
+  object-fit: contain;
 }
 
 .content {
